[package]
name = "totk-map"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "totk"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.75"
bevy_egui = "0.22.0"
bevy_mod_raycast = "0.14.1"
bevy_pancam = "0.9.0"
bevy_svg = { version = "0.11.0", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
eframe = { version = "0.23.0", features = ["wgpu"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.40"

[dependencies.bevy]
version = "0.11.3"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "jpeg",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    # remove for webgpu support (unstable)
    "webgl2",
]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.74"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
